--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ body {
 
     #hero-image {
     background-image: url("../images/liberty-again.jpg");
-    height: 80vh;
+    height: 60vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -63,46 +63,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color:#ffffff;
-    font-size: 80px;
+    color:#ff6600;
+    font-size: 50px;
     letter-spacing: 2px;
     text-align: center;
   }
   
  
-
-  /* Media query for small devices */
-@media screen and (max-width: 767px) {
-    #hero-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-  
-    #hero-image {
-      width: 100%;
-      height: auto;
-    }
-  
-    #hero-text h1 {
-      font-size: 24px;
-      margin-top: 20px;
-    }
-
-  
-  /* Media query for large devices */
-  @media screen and (min-width: 768px) {
-    #hero-section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-}
-  
-    #hero-image {
-      font-size: 48px;
-      margin-right: 20px;
-    }
-}
