--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,25 @@ body {
   }
   
  
-/* Intro Container */
-.aerial-view {
-    height: 50;
-    width: 50;
+/* Headings */
+h2 {
+    text-align: center;
+    font-weight: 500;
+    padding-top: 25px;
+    padding-bottom: 10px;
+    text-decoration: underline;
+    text-decoration-style: wavy;
 }
+
+/* Paragraph */
+p {
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+/* Intro Container */
+/* .first {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+} */
