--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 /* Global site */
 * {
-    font-family: "Lexend", sans-serif;
+    font-family: 'Lexend', sans-serif;
     margin: 0;
     padding: 0;
     border: 0;
@@ -22,6 +23,7 @@ body {
 }
 
 .navbar-brand {
+    font-family: 'Poppins', sans-serif;
     padding-left: 20px;
     font-size: 40px;
     letter-spacing: 2px;
@@ -58,6 +60,7 @@ body {
   }
   
     #hero-text h1 {
+    font-family: 'Poppins', sans-serif;    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -71,7 +74,8 @@ body {
   
  
 /* Headings */
-h2 {
+    h2 {
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     font-weight: 500;
     padding-top: 25px;
@@ -81,7 +85,7 @@ h2 {
 }
 
 /* Paragraph */
-p {
+    p {
     padding-bottom: 10px;
     text-align: center;
 }
