--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,51 @@
     box-sizing: border-box;
 }
 
+/* BOOTSTRAP 5 BREAKPOINTS
+/* X-Small devices (portrait phones, less than 576px) */
+/* No media query for xs since this is the default in Bootstrap */
+#breakpoints::before {
+    content: "Extra Small mobile screens (<576px Portrait phones)";
+    font-family: Arial, Helvetica, sans-serif;
+    color: #8B12FC;
+    font-size: 20px;
+}
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    #breakpoints::before {
+        content: "Small screens and up (>576px Landscape phones) - 'sm'";
+        background-color: aquamarine;
+    }
+}
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    #breakpoints::before {
+        content: "Medium screens and up (>768px Tablets) - 'md'";
+        background-color: aquamarine;
+    }
+}
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    #breakpoints::before {
+        content: "Large screens and up (>992px Desktops) - 'lg'";
+        background-color: aquamarine;
+    }
+}
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    #breakpoints::before {
+        content: "Extra Large screens and up (>1200px Large Desktops) - 'xl'";
+        background-color: aquamarine;
+    }
+}
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+    #breakpoints::before {
+        content: "Extra Extra Large screens and up (>1400px Larger Desktops) - 'xxl'";
+        background-color: aquamarine;
+    }
+}
+
 body {
     background-color: #ff6600;
     color: #ffffff;
@@ -96,8 +141,11 @@ body {
 
 /* Intro Container */
 .intro-container {
-    background-color: #ff6600;
-    padding-left: 10px;
+    /* background-color: #ff6600; */
+    /* padding-left: 10px; */
+    display: flex
+    justify-content: center;
+    align-items: center;
 }
 
 .aerial-view-new {
