--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,11 +129,12 @@ body {
     padding-bottom: 10px;
     text-decoration: underline;
     text-decoration-style: dashed;
+    padding-bottom: 20px;
 }
 
 /* Paragraph */
     p {
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     padding-left: 10px;
     padding-top:10px;
     text-align: center;
@@ -162,3 +163,12 @@ body {
     text-align: center;
     color: 003884;
 }
+
+.icon-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center; 
+}
+
+
