--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600&family=Poppins:wght@400;500;600&display=swap');
 
 /* Global site */
 * {
@@ -121,7 +120,7 @@ body {
 /* Headings */
     h2 {
     font-family: 'Poppins', sans-serif;
-    color:#ffffff;
+    color:#ffffff !important;
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
@@ -173,4 +172,8 @@ body {
     color:#ffffff;
 }
 
-
+.icon-captions {
+    padding-top: 45px;
+    padding-left: 20px;
+    padding-bottom: 50px;
+}
