--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,12 @@ body {
     font-weight: 400;
     text-decoration: underline;
     text-decoration-style: dashed;
+    padding-bottom: 20px;
+    }
+
+    h6 {
+    text-align: center;
+    text-transform: uppercase;
     }
 
 
