--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 200px;
-    border: 3px solid greenyellow;
+    border: 3px solid #003884;
     border-radius: 25px;
 }
 
@@ -211,7 +211,7 @@ body {
 
 .free-tips {
     min-height: 200px;
-    border-style: 3px solid greenyellow;
+    border-style: 3px solid #003884;
     border-radius: 25px;
 }
 
@@ -221,8 +221,9 @@ body {
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
-    border: 3px solid white;
+    border: 3px solid #003884;
     border-radius: 25px;
+    background-color: green;
     /* padding-left: 0;
     padding-right: 0;
     margin-right: 1px; */
@@ -234,8 +235,9 @@ body {
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
-    border: 3px solid white;
+    border: 3px solid #003884;
     border-radius: 25px;
+    background-color: rgb(0, 85, 255);
     /* padding-left: 0px;
     padding-right: 0px;
     margin-left: 1px; */
