--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ body {
     margin-bottom: 50px;
     border: 3px solid#ffac75;
     border-radius: 25px;
-    background-color: green;
+    background-color: #00eb00;
     color: #002561;
     /* padding-left: 0;
     padding-right: 0;
@@ -238,7 +238,7 @@ body {
     margin-bottom: 50px;
     border: 3px solid #ffac75;
     border-radius: 25px;
-    background-color: rgb(0, 85, 255);
+    background-color: #94b8ff;
     color: #002561;
     /* padding-left: 0px;
     padding-right: 0px;
