--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ h6 {
     margin-bottom: 50px;
     border: 3px solid#ffac75;
     border-radius: 25px;
-    background-color: #00eb00;
+    background-color: #98f698;
     color: #002561;
 }
 
