--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,22 @@ h3 {
     padding-bottom: 10px;
     }
 
+h4 {
+    font-family: 'Poppins', sans-serif;
+    color:#002561;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h5 {
+    font-family: 'Poppins', sans-serif;
+    color:#002561;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 h6 {
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     text-transform: uppercase;
     color: #002561;
@@ -212,8 +227,8 @@ h6 {
     float: right;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px;
-    border: 3px solid#ffac75;
+    margin-bottom: 20px;
+    border: 3px solid #ffac75;
     border-radius: 25px;
     background-color: #98f698;
     color: #002561;
@@ -224,9 +239,14 @@ h6 {
     float: right;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     border: 3px solid #ffac75;
     border-radius: 25px;
     background-color: #94b8ff;
     color: #002561;
+}
+
+/* Form Container */
+.form-container {
+    background-color: #ffac75;
 }
