--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,13 +137,6 @@ h3 {
     padding-bottom: 10px;
     }
 
-h4 {
-    font-family: 'Poppins', sans-serif;
-    color:#002561;
-    text-align: center;
-    text-transform: uppercase;
-}
-
 h5 {
     font-family: 'Poppins', sans-serif;
     color:#002561;
@@ -275,6 +268,19 @@ h6 {
         max-width: 60%;
     } 
 
+    #hero-text h1 {
+        font-family: 'Poppins', sans-serif;    
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color:#ffac75;
+        font-size: 4rem;
+        font-weight: 500;
+        letter-spacing: 2px;
+        text-align: center;
+      }
+
  /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
     .centre-form {
@@ -283,6 +289,19 @@ h6 {
         margin: 0 auto;
         max-width: 50%;
     }
+
+    #hero-text h1 {
+        font-family: 'Poppins', sans-serif;    
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color:#ffac75;
+        font-size: 6rem;
+        font-weight: 500;
+        letter-spacing: 2px;
+        text-align: center;
+      }
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
