--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,11 +119,10 @@ h2 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
-    padding-top: 25px;
-    padding-bottom: 10px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     text-decoration: underline;
     text-decoration-style: dashed;
-    padding-bottom: 20px;
 }
 
 h3 {
@@ -137,19 +136,12 @@ h3 {
     padding-bottom: 10px;
     }
 
-h4 {
-    font-family: 'Poppins', sans-serif;
-    color:#002561;
-    text-align: center;
-    text-transform: uppercase;
-    padding-bottom: 10px;
-}
-
 h5 {
     font-family: 'Poppins', sans-serif;
     color:#002561;
     text-align: center;
     text-transform: uppercase;
+    padding-top:60px;
 }
 
 h6 {
@@ -217,6 +209,7 @@ h6 {
     padding-bottom: 50px;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .icons {
@@ -288,7 +281,7 @@ h6 {
         padding-top: 20px;
         min-height: 240px;
         margin: 0 auto;
-        max-width: 60%;
+        max-width: 70%;
     } 
 
     #hero-text h1 {
@@ -310,7 +303,7 @@ h6 {
         padding-top: 30px;
         min-height: 240px;
         margin: 0 auto;
-        max-width: 50%;
+        max-width: 80%;
     }
 
     #hero-text h1 {
@@ -320,7 +313,7 @@ h6 {
         left: 50%;
         transform: translate(-50%, -50%);
         color:#ffac75;
-        font-size: 6rem;
+        font-size: 5rem;
         font-weight: 500;
         letter-spacing: 2px;
         text-align: center;
@@ -328,7 +321,9 @@ h6 {
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-   
+    .icons {
+        width:100vw;
+    }
     }
 }
 /* XX-Large devices (larger desktops, 1400px and up) */
