--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,26 @@ h6 {
     background-color: #ffac75;
 }
 
+.card-img-top {
+    border-radius: 50px;
+    padding:20px;
+}
+
+.card {
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.card-title {
+   
+}
+
+.card-text {
+    padding-top: -50px;
+}
+
+
+
 
 /* ---------------------------------------------------------------------Media Queries */
 /* Small devices (landscape phones, 576px and up) */
@@ -332,3 +352,4 @@ h6 {
 }
 
 
+}
