--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
     border: greenyellow 2px solid;
 }
 
-/* Hero Image Container */
+/* -------------------------------------------------------------------Hero Image Container */
 .hero-section {
         position: relative;
 }
@@ -187,6 +187,13 @@ h6 {
     text-align: center;
     word-spacing: 2px;
 }
+
+/* ------------------------------------------------------------------ Buttons */
+#tips-buttons {
+    background-color: #8B12FC;
+}
+
+
 /* -------------------------------------------------------------------Intro Container */
 .intro-container {
     display: fixed;
@@ -199,7 +206,7 @@ h6 {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 200px;
-    border: 3px solid#002561;
+    border: 3px solid  #ffac75;
     border-radius: 25px;
 }
 
