--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600&family=Poppins:wght@400;500;600&display=swap');
 
 /* --------------------------------------------------- Global site */
-* {
+body {
     font-family: 'Lexend', sans-serif;
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    background-color: #ffac75;
+    color:#002561;
 }
 
 /* BOOTSTRAP 5 BREAKPOINTS
@@ -114,7 +116,6 @@
 /* -----------------------------------------------------------------Headings */
 h2 {
     font-family: 'Poppins', sans-serif;
-    color:#002561;
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
@@ -126,7 +127,6 @@ h2 {
 
 h3 {
     font-family: 'Poppins', sans-serif;
-    color:#002561;
     text-align: center;
     text-transform: uppercase;
     font-weight: 400;
@@ -137,14 +137,12 @@ h3 {
 
  h4 {
     font-family: 'Poppins', sans-serif;
-    color:#002561;
     text-align: center;
     text-transform: uppercase;
  }   
 
 h5 {
     font-family: 'Poppins', sans-serif;
-    color:#002561;
     text-align: center;
     text-transform: uppercase;
     padding-top:10px;
@@ -158,29 +156,21 @@ h6 {
     color: #fff;
     }
 
-
 /* ------------------------------------------------------------------ Paragraph */
 .aerial-view-new p {
-    font-family: 'Lexend', sans-serif;
     padding-bottom: 5px;
     padding-left: 10px;
     padding-top:10px;
     text-align: center;
-    color:#002561;
 }
 
 .free-tips-icons p,
 .discounted-tips-icons {
-    font-family: 'Lexend', sans-serif;
-    color:#002561;
     text-align: center;
-    /* padding-top: -5px; */
 }
 
 .card-body p {
-    font-family: 'Lexend', sans-serif;
     text-align: center;
-    color:#002561;
 }
 
 .footer-container p {
@@ -201,11 +191,9 @@ h6 {
     border: greenyellow 2px solid;
 }
 
-
 /* -------------------------------------------------------------------Intro Container */
 .intro-container {
     display: fixed;
-    background-color: #ffac75;
 }
 
 .aerial-view-new {
@@ -219,7 +207,6 @@ h6 {
 }
 
 .intro-text {
-    color: #002561;
     padding-right: 10px;
     text-align: center;
 }
@@ -228,7 +215,6 @@ h6 {
 .icon-container {
     display: flex;
     flex-direction: row;
-    color:#002561;
 }
 
 .icon-captions {
@@ -243,7 +229,7 @@ h6 {
 .icons {
     padding-bottom: 20px;
     justify-content: center;
-    align-items: center; */
+    align-items: center; 
 }
 
 /* -------------------------------------------------------------------- Tips Container */
@@ -260,23 +246,21 @@ h6 {
     border: 3px solid #ffac75;
     border-radius: 25px;
     background-color: #98f698;
-    color: #002561;
+   
 }
 
 .discounted-tips-icons {
     color: #ffffff;
-    float: right;
+    float: left;
     line-height: 20px;
     clear: both;
     border: 3px solid #ffac75;
     border-radius: 25px;
     background-color: #94b8ff;
-    color: #002561;
 }
 
 /* -------------------------------------------------------------------- Form Container */
 .form-container {
-    background-color: #ffac75;
     padding-top: 20px;
 }
 
@@ -290,9 +274,7 @@ h6 {
 
 
 /* -------------------------------------------------------------------- Gallery Container */
-.gallery-container {
-    background-color: #ffac75;
-}
+.gallery-container 
 
 .card-img-top {
     border-radius: 50px;
@@ -308,7 +290,6 @@ h6 {
 /* -------------------------------------------------------------------- Footer Container */
 .footer-container {
     background-color: #002561;
-    color: #fff;
     min-height: 60px;
 }
 
@@ -325,104 +306,74 @@ h6 {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-    .centre-form {
-        padding-top: 20px;
-        min-height: 240px;
-        margin: 0 auto;
-        max-width: 70%;
-    } 
+.centre-form {
+    padding-top: 20px;
+    min-height: 240px;
+    max-width: 70%;
+} 
 
-    #hero-text h1 {
-        font-family: 'Poppins', sans-serif;    
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color:#ffac75;
-        font-size: 4rem;
-        font-weight: 500;
-        letter-spacing: 2px;
-        text-align: center;
+#hero-text h1 {
+    font-size: 4rem;
       }
 
-      .social-links li {
-        display: inline-block;
-        padding-left: 50px;
-    }
+.social-links li {
+    display: inline-block;
+    padding-left: 50px;
+}
 
  /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-    .centre-form {
-        padding-top: 30px;
-        min-height: 240px;
-        margin: 0 auto;
-        max-width: 80%;
-    }
+.centre-form {
+    padding-top: 30px;
+    min-height: 240px;
+    max-width: 80%;
+}
 
-    #hero-text h1 {
-        font-family: 'Poppins', sans-serif;    
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color:#ffac75;
-        font-size: 4rem;
-        font-weight: 500;
-        letter-spacing: 2px;
-        text-align: center;
-      }
+#hero-text h1 {
+    font-family: 'Poppins', sans-serif;    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:#ffac75;
+    font-size: 4rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-align: center;
+}
 
-    .social-links li {
-        display: inline-block;
-        padding-left: 80px;
-        font-size: 1.5rem;
-    }
+.social-links li {
+    display: inline-block;
+    padding-left: 80px;
+    font-size: 1.5rem;
+}
 
-    .thrifty-email {
-        font-size: 1.5rem;
-    }
+.thrifty-email {
+    font-size: 1.5rem;
+}
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-    #hero-text h1 {
-        font-family: 'Poppins', sans-serif;    
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color:#ffac75;
-        font-size: 5rem;
-        font-weight: 500;
-        letter-spacing: 2px;
-        text-align: center;
-      }
+#hero-text h1 {
+    font-size: 5rem;
+}
 
-    .social-links li {
-        display: inline-block;
-        padding-left: 130px;
-        font-size: 2rem;
-    }
+.social-links li {
+    display: inline-block;
+    padding-left: 130px;
+    font-size: 2rem;
+}
 
-    .thrifty-email {
-        font-size: 1.5rem;
-    }
-    }
+.thrifty-email {
+    font-size: 1.5rem;
+}
+}
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
-    #hero-text h1 {
-        font-family: 'Poppins', sans-serif;    
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color:#ffac75;
-        font-size: 5.5rem;
-        font-weight: 500;
-        letter-spacing: 2px;
-        text-align: center;
-      }
-
+#hero-text h1 {
+    font-size: 5.5rem;
+}
 
 .icon-container {
     justify-content: center;
