White text readded to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ h6 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 600;
-    color: #fff;
+    color: #ffffff !important;
     }
 
 /* ------------------------------------------------------------------ Paragraph */
@@ -176,6 +176,7 @@ h6 {
 .footer-container p {
     text-align: center;
     word-spacing: 2px;
+    color: #fff;
 }
 
 /* ------------------------------------------------------------------ Buttons */
@@ -301,8 +302,7 @@ h6 {
 /* ---------------------------------------------------------------------Media Queries */
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-    
-    }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
@@ -314,7 +314,7 @@ h6 {
 
 #hero-text h1 {
     font-size: 4rem;
-      }
+}
 
 .social-links li {
     display: inline-block;
@@ -330,26 +330,17 @@ h6 {
 }
 
 #hero-text h1 {
-    font-family: 'Poppins', sans-serif;    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color:#ffac75;
-    font-size: 4rem;
-    font-weight: 500;
-    letter-spacing: 2px;
-    text-align: center;
+    font-size: 4rem;    
 }
 
 .social-links li {
-    display: inline-block;
     padding-left: 80px;
     font-size: 1.5rem;
 }
 
 .thrifty-email {
     font-size: 1.5rem;
+}
 }
 
 /* X-Large devices (large desktops, 1200px and up) */
