--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,8 @@ h6 {
 /* -------------------------------------------------------------------Intro Container */
 .intro-container {
     display: fixed;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .aerial-view-new {
@@ -324,7 +326,7 @@ h6 {
 } 
 
 #hero-text h1 {
-    font-size: 6rem;
+    font-size: 4rem;
 }
 
  /* Large devices (desktops, 992px and up) */
