--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,15 +259,26 @@ h6 {
 /* -------------------------------------------------------------------- Footer Container */
 .footer-container {
     background-color: #002561;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     min-height: 60px;
-}
-
-.thrifty-email {
-    padding-left: 10px;
+    text-align: center;
 }
 
 .social-links li {
     display: inline-block;
+}
+
+
+
+
+.social-links li {
+    display: inline-block;
+    column-gap: 30px;
+    justify-content: center;
+    margin: 0;
+    text-align: center;
 }
 
 /* ---------------------------------------------------------------------Media Queries */
@@ -277,10 +288,12 @@ h6 {
     border-bottom: 20px;
 }
 
-.social-links li {   
-    padding-left: 30px;
+/* .social-links li {
+    align-items: center;   
+    justify-content: center;
+    margin: 0;
     vertical-align: middle;
-}
+} */
 }
 
 /* Medium devices (tablets, 768px and up) */
