--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,19 +266,10 @@ h6 {
     text-align: center;
 }
 
-.social-links li {
-    display: inline-block;
-}
-
-
-
 
 .social-links li {
     display: inline-block;
-    column-gap: 30px;
-    justify-content: center;
-    margin: 0;
-    text-align: center;
+    letter-spacing: 90px;
 }
 
 /* ---------------------------------------------------------------------Media Queries */
